@@ -1,3 +1,9 @@
+2012-08-30   Luke Bryan <lukebryan@bdumail.com> 
+
+   * screenio.cpy : Added for extended Accept: 
+                       Tab = 2007 return code. 
+                       Back tab = 2008 return code. 
+
 2008-08-09  Roger While <simrw@sim-basis.de>
 
 	* Add color definitions  to screenio.cpy
